[tool.poetry]
authors = [
    "Frederico V Lima <frederico.vieira@gmail.com>"
]
name = "sample-fast-api"
description = "sample-fast-api"
license = "MIT"
version = "0.1.0"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-vvv --cov=sample_fast_api --cov-report=term-missing"

[tool.black]
line-length = 110

[tool.isort]
line_length = 110
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
known_localfolder = "sample_fast_api,apps,tests"
skip_glob = "migrations/*"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
default_section = "THIRDPARTY"

[tool.poetry.dependencies]
python = "^3.8"
aiopg = "^1.0.0"
alembic = "^1.4.2"
email_validator = "^1.1.0"
fastapi = "^0.54.1"
gino = {extras = ["starlette"], version = "^1.0.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.2"}
prettyconf = "^2.1.0"
psycopg2 = "^2.8.6"
python-jose = {extras = ["cryptography"], version = "^3.2.0"}
python-multipart = "^0.0.5"
uvicorn = "^0.11.5"

[tool.poetry.dev-dependencies]
black = { version = "^19", allow-prereleases = true }
pre-commit = "^1.18"
pytest = "^6.0"
pytest-asyncio = "^0.12"
pytest-cov = "^2.8"
python-status = "i^1.0"
requests = "^2.23.0"
codecov = "^2.0.22"
nest_asyncio = "^1.3.3"
coverage = {extras = ["toml"], version = "^5.3"}

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
